# DailyCheck-Agent

./: .gitignore  CLAUDE.md  LICENSE  README-CN.md  README.md  TODO.md  pyproject.toml  requirements.txt  run.sh
.claude/: MEMORY.md  SKILLS.md
.github/workflows/: CI.yml
config/: api.yml  prompts.yml  tasks.yml
dailycheck_agent/: __init__.py  __main__.py  cli.py  main.py
dailycheck_agent/lib/: api_request.py  config_loader.py  prompt.py  render.py  tui.py
tests/: conftest.py  test_api_request.py  test_cli.py  test_config_loader.py  test_main.py  test_prompt.py  test_render.py  test_tui.py
